# BTPC

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  STATUS.md  add_half_types.sh  disable_mesa_headers.sh  fix_clctypes_final.sh  fix_clctypes_scalar.sh  fix_mesa_opencl.sh  fix_nvidia_gpu.sh  fix_nvidia_opencl.sh  install_amdgpu_pro_legacy.sh  install_libclc_stub_headers.sh  install_nvidia_driver.sh  install_rocm_opencl.sh  package-lock.json  register_nvidia_opencl.sh  restore_minimal_clc.sh  status3.md  test_crystals_api.rs  test_dilithium_api.rs
MD/: ALL_FIXES_APPLIED_2025-11-06.md  ARCHITECTURE.md  ATTACK_SCENARIOS.md  AUDIT_ISSUE_COUNT_CLARIFICATION.md  AUTHENTICATION_ANALYSIS_REPORT.md  AUTH_STATE_MANAGEMENT_INVESTIGATION.md  BACKUP_WALLET_ANALYSIS_2025-10-31.md  BLOCKCHAIN_INFO_PANEL_FIX.md  BLOCK_TIMING_FIX_COMPLETE.md  BROWSER_CONSOLE_ERRORS_FIXED_2025-11-01.md  BTPC_DESKTOP_APP_COMPREHENSIVE_ANALYSIS_2025-10-25.md  BTPC_SETUP.md  BUG_FIXES_COMPLETE.md  BUG_FIXES_IMPLEMENTATION.md  BUG_FIXES_SESSION_2025-10-19.md  BUG_FIXES_VERIFICATION_2025-10-19.md  BUG_FIX_COMPLETION_2025-11-12.md  BUG_FIX_PLAN.md  BUG_FIX_VERIFICATION_2025-11-12.md  BUG_REPORT_2025-11-11.md  BUILD_COMPLETE_2025-11-05.md  CLEANUP_TRACKER.md  CLEAN_BUILD_COMPLETE_2025-11-01.md  CODE_QUALITY_IMPROVEMENTS_2025-10-11.md  CODE_REVIEW_2025-10-11.md  CONNECTIVITY_ANALYSIS_REPORT.md  CONNECTIVITY_FIXES_SUMMARY.md  CONSENSUS_ISSUE_10_RANDOMIZED_NONCES_COMPLETE.md  CONSENSUS_ISSUE_12_F64_REMOVAL_COMPLETE.md  CONSENSUS_ISSUE_4_CHECKED_ARITHMETIC_COMPLETE.md  CONSENSUS_ISSUE_6_REPLAY_PROTECTION_COMPLETE.md  CONSENSUS_ISSUE_7_NONCE_EXHAUSTION_COMPLETE.md  CONSENSUS_ISSUE_8_DIFFICULTY_VALIDATION_COMPLETE.md  CONSENSUS_MODULE_REVIEW_2025-10-11.md  CONSENSUS_PRIORITY_FIXES_2025-10-11.md  CONSENSUS_SECURITY_AUDIT.md  CONSENSUS_SECURITY_PROGRESS.md  CONSENSUS_VALIDATION_FIX_SUMMARY.md  CONSTITUTION.md  CRITICAL_BIP39_DETERMINISM_ISSUE.md  (+307 more)
bins/btpc_miner/: Cargo.toml
bins/btpc_miner/src/: gpu_miner.rs  main.rs  template_cache.rs
bins/btpc_wallet/: Cargo.toml
bins/btpc_wallet/src/: main.rs
bins/create_wallet_w2/: Cargo.toml
bins/create_wallet_w2/src/: main.rs
bins/genesis_tool/: Cargo.toml
bins/genesis_tool/src/: main.rs
btpc-core/: Cargo.toml
btpc-core/MD/: PHASE4C_LOW_PRIORITY_UNWRAP_ELIMINATION.md
btpc-core/benches/: blockchain_bench.rs  crypto_bench.rs  sync_throughput.rs
btpc-core/src/: lib.rs  rpc.rs
btpc-core/src/blockchain/: block.rs  chain.rs  genesis.rs  merkle.rs  mod.rs  reorg.rs  transaction.rs  utxo.rs
btpc-core/src/consensus/: difficulty.rs  mod.rs  pow.rs  pow_tests_addon.rs  rewards.rs  storage_validation.rs  validation.rs
btpc-core/src/crypto/: bip39.rs  hash.rs  keys.rs  mod.rs  script.rs  shake256_derivation.rs  signatures.rs  wallet_serde.rs
btpc-core/src/economics/: mod.rs  rewards.rs
btpc-core/src/mempool/: mod.rs
btpc-core/src/network/: address_manager.rs  block_source.rs  connection_tracker.rs  discovery.rs  integrated_sync.rs  mod.rs  peer_ban_manager.rs  protocol.rs  rate_limiter.rs  simple_peer_manager.rs  sync.rs  testing.rs
btpc-core/src/rpc/: handlers.rs  integrated_handlers.rs  methods.rs  server.rs  types.rs
btpc-core/src/state/: mod.rs  network_state.rs
btpc-core/src/storage/: blockchain_db.rs  database.rs  mempool.rs  mod.rs  rocksdb_config.rs  utxo_db.rs
btpc-core/tests/: contract_crypto.rs  contract_rpc.rs  contract_simplified.rs  integration_bip39_consistency.rs  integration_bip39_cross_device.rs  integration_bip39_edge_cases.rs  integration_bip39_security_audit.rs  integration_bip39_stress_test.rs  multi_node_network.rs  pow_validation.rs  signature_verification.rs  test_100x_consistency.rs  test_bip39_mnemonic.rs  test_bip39_to_seed.rs  test_coinbase_serialization.rs  test_cross_device_recovery.rs  test_deterministic_keys.rs  test_shake256_derivation.rs  test_wallet_versioning.rs  wallet_persistence_test.rs
btpc-core/tests/contract/: test_blockchain_api_block.rs  test_blockchain_api_info.rs  test_blockchain_api_transaction.rs  test_crypto_api_sign.rs  test_crypto_api_verify.rs
btpc-core/tests/integration/: test_genesis_block.rs  test_invalid_signatures.rs  test_linear_decay.rs  test_mldsa_transaction.rs
btpc-desktop-app/: .eslintrc.js  AUTH_IMPLEMENTATION_SUMMARY.md  AUTH_TESTING_GUIDE.md  CHANGES_VERIFICATION.md  CODE_STATUS_SUMMARY.md  Cargo.toml  REBUILD_INSTRUCTIONS.md  TRANSACTION_MONITOR_COMPLETE.md  UI_DUPLICATE_ANALYSIS.md  UI_DUPLICATE_FIX_COMPLETE.md  claude.json  cypress.config.js  jest.config.js  package-lock.json  package.json  reassign_utxos.sh  test_bip39_validation.rs  test_mining_ui.sh
btpc-desktop-app/.github/workflows/: ci.yml
btpc-desktop-app/bins/btpc_node/: Cargo.toml
btpc-desktop-app/bins/create_wallet_w2/: Cargo.toml
btpc-desktop-app/btpc-core/: Cargo.toml
btpc-desktop-app/btpc-core/benches/: blockchain_bench.rs  crypto_bench.rs
btpc-desktop-app/btpc-core/src/: lib.rs  rpc.rs
btpc-desktop-app/cypress/e2e/: btpc-app.cy.js
btpc-desktop-app/cypress/support/: commands.js  e2e.js
btpc-desktop-app/docs/archive/: API_MISMATCH_FIXES_2025-10-07.md  BALANCE_CACHE_SYNC_FIX_2025-10-07.md  DESKTOP_APP_STATUS.md  (+25 more)
btpc-desktop-app/scripts/: cleanup-dev-servers.sh
btpc-desktop-app/src-tauri/: Cargo.toml  deny.toml  rustc-ice-2025-10-29T05_23_57-118220.txt  rustc-ice-2025-11-06T03_20_08-300037.txt  tauri.conf.json  test_kernel.cl  test_opencl.rs
btpc-desktop-app/tests/: backend-first-validation.test.js  error-handling.test.js  event-listener-cleanup.test.js  setup.js  tauri-context.test.js  ui.test.js
btpc-desktop-app/ui/: ICON_DELIVERABLES_SUMMARY.md  PROFESSIONAL_ICONS_COMPLETE.md  analytics.html  btpc-backend-first.js  btpc-common.js  btpc-corruption-check.js  btpc-event-manager.js  btpc-logout.js  btpc-storage.js  btpc-styles.css  btpc-tauri-context.js  btpc-update-manager.js  icon-showcase.html  index.html  login.html  mining-gpu-dashboard.js  mining.html  node.html  password-modal.html  password-modal.js  qrcodegen.js  settings.html  test-tabs.html  transactions.html  wallet-manager.html
(+479 files in other folders)
