[workspace]
members = [
    "btpc-core",
    "bins/btpc_node",
    "bins/btpc_wallet",
    "bins/btpc_miner",
    "bins/genesis_tool"
, "test_opencl_diagnostic"]
resolver = "2"

# Workspace-wide configuration
[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["BTPC Development Team"]

# Shared dependencies across workspace
[workspace.dependencies]
# Cryptography
pqcrypto = "0.18"
pqcrypto-mldsa = "0.1.0"
pqcrypto-traits = "0.3"
pqc_dilithium = "0.2"
sha2 = "0.10"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
ripemd = "0.1"
bs58 = "0.5"
subtle = "2.6"

# Async runtime
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking & HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
rocksdb = { version = "0.21", features = ["multi-threaded-cf"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
url = "2.0"
num_cpus = "1.16"
