[workspace]
members = [
    "btpc-core",
    "bins/btpc_node",
    "bins/btpc_miner",
    "bins/btpc_wallet",
    "bins/genesis_tool"
]
# Note: btpc-desktop-app has its own workspace and is built separately
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rocksdb = "0.21"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
rand_chacha = "0.3"
zeroize = { version = "1.8", features = ["derive"] }
ripemd = "0.1"
hex = "0.4"
serde_json = "1.0"
bs58 = "0.5"
num_cpus = "1.16"
pqc_dilithium = "0.1"
bincode = "1.3"
aes-gcm = "0.10"
argon2 = "0.5"
subtle = "2.5"

[workspace.package]
rust-version = "1.75"
edition = "2021"