[package]
name = "btpc-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
rocksdb = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
zeroize = { workspace = true }
ripemd = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
bs58 = { workspace = true }
pqc_dilithium = { workspace = true }
num_cpus = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
subtle = { workspace = true }
base64 = "0.21"  # HTTP Basic Auth for RPC (Issue #1)

# TLS Support for RPC (Issue #2)
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2.0"

# DoS Protection for RPC (Issue #3)
governor = "0.6"  # Token bucket rate limiter
dashmap = "5.5"   # Concurrent hashmap for connection tracking

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "blockchain_bench"
harness = false