[workspace]
members = [
    "btpc-core",
    "src-tauri",
    "bins/btpc_miner",
    "bins/btpc_node",
    "bins/btpc_wallet",
    "bins/create_wallet_w2",
    "bins/genesis_tool",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
rocksdb = "0.21"

# Crypto / hashing
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
rand_chacha = "0.3"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"
ripemd = "0.1"
pqc_dilithium = "0.1"

# Encoding
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Utilities
num_cpus = "1.0"
