[package]
name = "btpc_wallet"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
btpc-core = { path = "../../btpc-core" }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }