[package]
name = "genesis_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
btpc-core = { path = "../../btpc-core" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }