[package]
name = "btpc_node"
version = "0.1.0"
edition = "2021"

[dependencies]
btpc-core = { path = "../../btpc-core" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }